tests/baselines/reference/checkForObjectTooStrict.errors.txt
checkForObjectTooStrict.ts(3,18): error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module CommonJS.


==== checkForObjectTooStrict.ts (1 errors) ====
    namespace Foo {
    
        export class Object {
                     ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module CommonJS.
    
        }
    
    }
    
     
    
    class Bar extends Foo.Object { // should work
    
        constructor () {
    
            super();
    
        }
    
    }
    
    
    class Baz extends Object {
    
        constructor () { // ERROR, as expected
    
            super();
    
        }
    
    }
    